--- a/index.html
+++ b/index.html
@@ -1,17 +1,36 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
+
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Site Escola</title>
     <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
-    <h1>vai ser uma imagem aqui</h1>
-    <ul>
-        <li>Estudante</li>
-        <li>Escola</li>
-    </ul>
-</body>
+    <header class="cabecalho">
+        <img class="cabecalho-imagem" src="./img/logo.png" alt="Logo do site">
+        <ul class="cabecalho-lista-item">
+            <li class="cabecalho-lista-item">Apresentação</li>
+            <li class="cabecalho-lista-item">Materiais</li>
+        </ul>
+    </header>
+    <section>
+        <h2>sobre a escola</h2>
+        <p></p>
+        <p></p>
+    </section>
+    
+    <section class=”escola”>
+        <h2 class=”escola-titulo”>Alura star</h2>
+        <p class=”escola-texto-um”>  A nossa escola foi fundada em 2001 com abjetivo de ensinar e ajudar as crianças e adolecente a se desenvolver na programação. </p>
+        <p class=”escola-texto-dois”>  A turma mais destacada de nosso colegio é a segunda serie C. Uma turma com estudantes muitos inteligentes, as veces um pouco bagunçados mais são exelentes. </p>
+        
+        <div>
+            <img class="imagem-imagem" src="./img/imagem.png" alt="">
+    </section>
+    </body>
+
 </html>
+
