--- a/index.html
+++ b/index.html
@@ -16,21 +16,18 @@
             <li class="cabecalho-lista-item">Materiais</li>
         </ul>
     </header>
-    <section>
-        <h2>sobre a escola</h2>
-        <p></p>
-        <p></p>
-    </section>
-    
-    <section class=”escola”>
-        <h2 class=”escola-titulo”>Alura star</h2>
-        <p class=”escola-texto-um”>  A nossa escola foi fundada em 2001 com abjetivo de ensinar e ajudar as crianças e adolecente a se desenvolver na programação. </p>
-        <p class=”escola-texto-dois”>  A turma mais destacada de nosso colegio é a segunda serie C. Uma turma com estudantes muitos inteligentes, as veces um pouco bagunçados mais são exelentes. </p>
+    <section class="escola">
+        <div class="escola-conteudo">
         
-        <div>
-            <img class="imagem-imagem" src="./img/imagem.png" alt="">
+        <h2 class="escola-titulo">Alura star</h2>
+        <p class="escola-texto-um"> A nossa escola foi fundada em 2001 com abjetivo de ensinar e ajudar as crianças e
+            adolecente a se desenvolver na programação. </p>
+        <p class="escola-texto-dois"> A turma mais destacada de nosso colegio é a segunda serie C. Uma turma com
+            estudantes muitos inteligentes, as veces um pouco bagunçados mais são exelentes. </p>
+        </div>
+            <img class="escola-imagem" src="./img/imagem.png" alt="">
     </section>
-    </body>
+
+</body>
 
 </html>
-
